navbar: aligned brand text with links, aligned links to the right, removed fixed position, adjusted some spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,10 @@
 .navigationBar {
   height: 40px;
   padding-top: 28px;
-  padding-bottom: 20px;
+}
+.navbar-brand {
+  display: flex;
+  align-items: center;
 }
 .navBarName {
   font-family: var(--default-font);
@@ -40,7 +43,6 @@ h2 {
 }
 h3 {
   font-family: var(--heading-font);
-  padding-top: 10px;
   margin-bottom: 0;
   text-align: end;
 }
@@ -64,7 +66,7 @@ p {
 .homepageHero {
   text-align: center;
   background-color: var(--color5);
-  padding-top: 40px;
+  padding-top: 20px;
 }
 .featPro {
   text-align: center;
